# video-library-app

./: 001-deploy-API.bat  docker-compose.yml  main.py  pyproject.toml
app/: app.py
app/api/: Dockerfile.api  app.py  container.bat  image.bat
app/db/: app.py  container.bat  image.bat  insert.bat
app/ux/: Dockerfile.ux  container.bat  edit.html  image.bat  index.html
templates/: edit.html  index.html
